--- a/public/home.html
+++ b/public/home.html
@@ -433,7 +433,7 @@
                 method: "POST",
                 headers: {
                     "Content-Type": "application/json",
-                    "Authorization": "Bearer sk-uuabiu_R98xSuGWboGdBEw"
+                    "Authorization": "Bearer /*Enter your api here*/"
                 },
                 body: JSON.stringify({
                     model: "Qwen3-235B-A22B-FP8",
